# omnipath-metabo

./: .bumpversion.cfg  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  STYLE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-testing-unit.yml
about/: index.html
community/: index.html
community/contribute/: index.html
community/contribute-codebase/: index.html
community/contribute-docs/: index.html
deploy/systemd/: omnipath-metabo.service  omnipath-metabo@.service
deployment/systemd/: index.html
docs/: about.md  index.md  installation.md  quickstart.md
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/deployment/: systemd.md
docs/learn/tutorials/: cosmos_pkn_quickstart.md
docs/reference/: index.md
docs/reference/source/omnipath_metabo/: _metadata-docs.md
docs/src/: conf.py
docs/vignettes/: cosmos-pkn.md  index.md
docs_notes/: stereospecificity_explained.md
installation/: index.html
learn/explanation/: index.html
learn/guides/: index.html
learn/tutorials/cosmos_pkn_quickstart/: index.html
learn/tutorials/quickstart/: index.html
learn/tutorials/tutorial0001_basics/: index.html
omnipath-metabo-project/design-philosophy/: index.html
omnipath-metabo-project/project/: index.html
omnipath-metabo-project/use-cases/: index.html
omnipath_metabo/: __init__.py  _metadata.py  _session.py
omnipath_metabo/_data/: resource-labels.yaml
omnipath_metabo/cli/: __init__.py  _main.py  _serve.py
omnipath_metabo/data/: __init__.py  resource-labels.yaml
omnipath_metabo/datasets/: __init__.py
omnipath_metabo/datasets/cosmos/: __init__.py  _blacklist.py  _build.py  _bundle.py  _cache.py  _cli.py  _config.py  _format.py  _mapping.py  _organisms.py  _orthology.py  _record.py  _translate.py  location.py  network.py
omnipath_metabo/datasets/cosmos/data/: __init__.py  blacklist.yaml  default_config.yaml  location_abb_tcdb.csv  slc_locations.csv  slc_routes.csv  tcdb_locations.csv  tcdb_routes.csv
omnipath_metabo/datasets/cosmos/resources/: __init__.py  brenda.py  gem.py  imm1415.py  kegg.py  mrclinksdb.py  omnipath.py  recon3d.py  rhea.py  slc.py  stitch.py  tcdb.py
omnipath_metabo/datasets/cosmos/sources/: __init__.py  brenda.py  mrclinksdb.py  tcdb.py
omnipath_metabo/db/: __init__.py  _connection.py  _schema.py
omnipath_metabo/misc/: _tee.py
omnipath_metabo/postbuild/: __init__.py  _chem_layer.py  _lipid_layer.py  _postbuild.py  _ramp_conflicts.py
omnipath_metabo/schema/: _base.py  _connection.py  _main.py  _structure.py
omnipath_metabo/server/: __init__.py  _app.py  _routes_cosmos.py  _routes_networks.py
omnipath_metabo/server/static/js/: anchor-offset.js
omnipath_metabo/server/templates/: landing.html
planning/: COSMOS_FORMAT_NOTES.md  coding-style.md  cosmos-future-features.md  cosmos-node-attrs.md  cosmos-plan.md  cosmos-translation-gaps.md  cosmos_pkn_categories.md  getting-started.md
quickstart/: index.html
reference/: index.html
reference/source/omnipath_metabo/_metadata-docs/: index.html
scripts/: build_cosmos_pkn.py  compare_metabolite_ids.py  structuredb.py
scripts_exploration/: STITCH_data_overview.md  STITCH_report.md  allosteric_regulation.py  convert_slc_locations.py  lipidnet_rhea.ipynb  protein_location_abb_SLC.txt  receptor_metabolite.py  stitch_interactions.py  transporter.py
search/: search_index.json
tests/: conftest.py  test_connection.py  test_lipid_labels.py  test_networks_api.py  test_postbuild.py  test_twentythree.py
tests/test_datasets/: __init__.py
tests/test_datasets/test_cosmos/: __init__.py  conftest.py  test_blacklist.py  test_build.py  test_cache.py  test_categories.py  test_config.py  test_format.py  test_gem.py  test_kegg.py  test_location.py  test_omnipath_resource.py  test_organisms.py  test_orthology.py  test_recon3d.py  test_record.py  test_resources.py  test_translate.py
vignettes/: index.html
vignettes/cosmos-pkn/: index.html
